--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "drizzle-orm": "^0.36.0",
         "next": "15.0.2",
         "pg": "^8.13.1",
+        "postgres": "^3.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "zod": "^3.23.8"
