--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "db:generate": "drizzle-kit generate"
     },
     "dependencies": {
+        "argon2": "^0.41.1",
+        "csprng": "^0.1.2",
         "dotenv": "^16.4.5",
         "drizzle-orm": "^0.36.0",
         "next": "15.0.2",
@@ -20,6 +22,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/csprng": "^0.1.4",
         "@types/node": "^20",
         "@types/pg": "^8.11.10",
         "@types/react": "^18",
