--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "db:generate": "drizzle-kit generate"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.685.0",
+        "@aws-sdk/s3-request-presigner": "^3.685.0",
         "argon2": "^0.41.1",
         "csprng": "^0.1.2",
         "dotenv": "^16.4.5",
