--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@aws-sdk/client-s3": "^3.685.0",
         "@aws-sdk/s3-request-presigner": "^3.685.0",
         "argon2": "^0.41.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "csprng": "^0.1.2",
         "dotenv": "^16.4.5",
         "drizzle-orm": "^0.36.0",
@@ -22,6 +24,8 @@
         "postgres": "^3.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "tailwind-merge": "^2.5.4",
+        "tailwindcss-animate": "^1.0.7",
         "react-hook-form": "^7.53.1",
         "zod": "^3.23.8"
     },
