--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.685.0",
         "@aws-sdk/s3-request-presigner": "^3.685.0",
+        "@radix-ui/react-avatar": "^1.1.1",
         "argon2": "^0.41.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
