--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
         "@types/pg": "^8.11.10",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.20",
         "drizzle-kit": "^0.27.1",
         "eslint": "^8",
         "eslint-config-next": "15.0.2",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
         "tsx": "^4.19.2",
         "typescript": "^5"
     }
