--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "postgres": "^3.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.3.0",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
